Fixed bug with backgrounds on iOS

--- a/themes/islands/main.css
+++ b/themes/islands/main.css
@@ -28,7 +28,7 @@ body{
 
 .content::before{
   content: "";
-  position: absolute;
+  position: fixed;
   background-position: 100%;
   left: 0;
   right: 0;
@@ -42,12 +42,11 @@ body{
   width: 100%;
   height: 100%;
 
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  
+  -webkit-filter: blur(7px);
+  -moz-filter: blur(7px);
+  -o-filter: blur(7px);
+  -ms-filter: blur(7px);
+  filter: blur(7px);
 }
 
 .links{
