--- a/themes/mountain/main.css
+++ b/themes/mountain/main.css
@@ -24,7 +24,7 @@ html{
 
 .content::before{
   content: "";
-  position: absolute;
+  position: fixed;
   background-position: 100%;
   left: 0;
   right: 0;
@@ -36,13 +36,13 @@ html{
   background-size: cover;
 
   width: 100%;
-  height: 99%;
+  height: 100%;
 
-  -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
+  -webkit-filter: blur(7px);
+  -moz-filter: blur(7px);
+  -o-filter: blur(7px);
+  -ms-filter: blur(7px);
+  filter: blur(7px);
 }
 
 .links{
